--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@types/node": "^12.12.16",
     "babel-loader": "^8.0.2",
     "nativescript-dev-webpack": "^1.0.0",
     "nativescript-vue-template-compiler": "^2.0.0",
@@ -28,8 +29,9 @@
     "node-sass": "^4.9.2",
     "tns-platform-declarations": "^6.0.0",
     "typescript": "^3.2.4",
-    "@types/node": "^12.12.16",
     "vue": "^2.5.22",
-    "vue-loader": "^15.4.0"
+    "vue-class-component": "^7.2.2",
+    "vue-loader": "^15.4.0",
+    "vue-property-decorator": "^8.4.0"
   }
 }
