--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.0.0",
     "@types/node": "^12.12.16",
     "babel-loader": "^8.0.2",
+    "nativescript-bluetooth": "^1.3.1",
     "nativescript-dev-webpack": "^1.0.0",
     "nativescript-vue-template-compiler": "^2.0.0",
     "nativescript-worker-loader": "~0.9.0",
