--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     }
   },
   "dependencies": {
+    "nativescript-fontawesome": "^1.0.0",
+    "nativescript-ui-sidedrawer": "^8.0.0",
     "nativescript-vue": "^2.4.0",
     "tns-core-modules": "^6.0.0"
   },
