--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "nativescript-bluetooth": "^1.3.1",
     "nativescript-dev-webpack": "^1.0.0",
     "nativescript-vue-template-compiler": "^2.0.0",
-    "nativescript-worker-loader": "~0.9.0",
+    "nativescript-worker-loader": "^0.11.0",
     "node-sass": "^4.9.2",
     "tns-platform-declarations": "^6.0.0",
     "typescript": "^3.2.4",
