--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     }
   },
   "dependencies": {
+    "nativescript": "^6.5.0",
     "nativescript-bluetooth": "^3.0.0-beta.10",
     "nativescript-fontawesome": "^1.0.0",
     "nativescript-ui-sidedrawer": "^8.0.0",
     "nativescript-vue": "^2.4.0",
-    "tns-core-modules": "^6.0.0",
-    "uuidv4": "^6.0.6"
+    "nativescript-worker-loader": "^0.11.0",
+    "tns-android": "^6.5.0",
+    "tns-core-modules": "^6.5.1",
+    "tns-ios": "^6.5.0",
+    "uuid-random": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -29,7 +33,6 @@
     "babel-loader": "^8.0.2",
     "nativescript-dev-webpack": "^1.0.0",
     "nativescript-vue-template-compiler": "^2.0.0",
-    "nativescript-worker-loader": "^0.11.0",
     "node-sass": "^4.9.2",
     "tns-platform-declarations": "^6.0.0",
     "typescript": "^3.2.4",
