--- a/package.json
+++ b/package.json
@@ -8,37 +8,38 @@
     "id": "edu.miami.prasad.bmimobile",
     "templateVersion": "v2",
     "tns-android": {
-      "version": "6.3.1"
+      "version": "6.5.0"
     },
     "tns-ios": {
-      "version": "6.4.2"
+      "version": "6.5.1"
     }
   },
   "dependencies": {
-    "nativescript": "^6.5.0",
+    "msgpack": "^1.0.3",
+    "nativescript": "^6.7.8",
     "nativescript-bluetooth": "^3.0.0-beta.10",
     "nativescript-fontawesome": "^1.0.0",
-    "nativescript-ui-sidedrawer": "^8.0.0",
-    "nativescript-vue": "^2.4.0",
-    "nativescript-worker-loader": "^0.11.0",
-    "tns-android": "^6.5.0",
+    "nativescript-ui-sidedrawer": "^8.0.1",
+    "nativescript-vue": "^2.6.1",
+    "tns-android": "^6.5.1",
     "tns-core-modules": "^6.5.1",
-    "tns-ios": "^6.5.0",
+    "tns-ios": "^6.5.1",
     "uuid-random": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "@types/node": "^12.12.16",
-    "babel-loader": "^8.0.2",
-    "nativescript-dev-webpack": "^1.0.0",
-    "nativescript-vue-template-compiler": "^2.0.0",
-    "node-sass": "^4.9.2",
-    "tns-platform-declarations": "^6.0.0",
-    "typescript": "^3.2.4",
-    "vue": "^2.5.22",
+    "@types/node": "^12.12.42",
+    "babel-loader": "^8.1.0",
+    "nativescript-dev-webpack": "^1.5.1",
+    "nativescript-vue-template-compiler": "^2.6.0",
+    "nativescript-worker-loader": "~0.11.0",
+    "node-sass": "^4.13.1",
+    "tns-platform-declarations": "^6.5.1",
+    "typescript": "^3.9.3",
+    "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
-    "vue-loader": "^15.4.0",
-    "vue-property-decorator": "^8.4.0"
+    "vue-loader": "^15.9.2",
+    "vue-property-decorator": "^8.4.2"
   }
 }
