--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nativescript": "^6.7.8",
     "nativescript-bluetooth": "^3.0.0-beta.10",
     "nativescript-fontawesome": "^1.0.0",
+    "nativescript-insomnia": "^1.2.3",
     "nativescript-ui-sidedrawer": "^8.0.1",
     "nativescript-vue": "^2.6.1",
     "tns-android": "^6.5.1",
