--- a/package.json
+++ b/package.json
@@ -4,19 +4,9 @@
   "description": "Mobile phone application interface for ecoglink BMI",
   "author": "Kevin Davis <kevin.davis@med.miami.edu>",
   "license": "MIT",
-  "nativescript": {
-    "id": "edu.miami.prasad.bmimobile",
-    "version": "0.1.3",
-    "versionNumber": "0",
-    "templateVersion": "v2",
-    "tns-android": {
-      "version": "6.5.0"
-    },
-    "tns-ios": {
-      "version": "6.5.1"
-    }
-  },
   "dependencies": {
+    "@nativescript/core": "7.0.0",
+    "@nativescript/webpack": "3.0.0",
     "msgpack": "^1.0.3",
     "nativescript": "^6.8.0",
     "nativescript-bluetooth": "^3.0.0-beta.10",
@@ -26,24 +16,24 @@
     "nativescript-ui-sidedrawer": "^8.0.1",
     "nativescript-vue": "^2.6.1",
     "tns-android": "^6.5.3",
-    "tns-core-modules": "^6.5.12",
+    "tns-core-modules": "^6.5.20",
     "tns-ios": "^6.5.2",
     "uuid-random": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@nativescript/ios": "7.0.4",
+    "@nativescript/types": "7.0.0",
     "@types/node": "^12.12.42",
     "babel-loader": "^8.1.0",
-    "nativescript-dev-webpack": "^1.5.1",
     "nativescript-vue-template-compiler": "^2.6.0",
-    "nativescript-worker-loader": "~0.11.0",
     "node-sass": "^4.13.1",
-    "tns-platform-declarations": "^6.5.1",
     "typescript": "^3.9.3",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
     "vue-loader": "^15.9.2",
     "vue-property-decorator": "^8.4.2"
-  }
+  },
+  "main": "main"
 }
