--- a/package.json
+++ b/package.json
@@ -5,18 +5,17 @@
   "author": "Kevin Davis <kevin.davis@med.miami.edu>",
   "license": "MIT",
   "dependencies": {
+    "@nativescript-community/ble": "^3.0.4",
     "@nativescript/core": "7.0.0",
     "@nativescript/webpack": "3.0.0",
     "msgpack": "^1.0.3",
     "nativescript": "^6.8.0",
-    "nativescript-bluetooth": "^3.0.0-beta.10",
     "nativescript-dev-version": "^0.2.0",
     "nativescript-fontawesome": "^1.0.0",
     "nativescript-insomnia": "^1.2.3",
-    "nativescript-ui-sidedrawer": "^8.0.1",
-    "nativescript-vue": "^2.6.1",
+    "nativescript-ui-sidedrawer": "^9.0.3",
+    "nativescript-vue": "^2.8.1",
     "tns-android": "^6.5.3",
-    "tns-core-modules": "^6.5.20",
     "tns-ios": "^6.5.2",
     "uuid-random": "^1.3.0"
   },
