--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "license": "MIT",
   "dependencies": {
     "@nativescript-community/ble": "^3.0.4",
-    "@nativescript/core": "7.0.0",
-    "@nativescript/webpack": "3.0.0",
+    "@nativescript/core": "^7.0.13",
+    "@nativescript/theme": "^3.0.0",
+    "@nativescript/webpack": "^3.0.8",
     "msgpack": "^1.0.3",
     "nativescript": "^6.8.0",
     "nativescript-dev-version": "^0.2.0",
@@ -15,8 +16,6 @@
     "nativescript-insomnia": "^1.2.3",
     "nativescript-ui-sidedrawer": "^9.0.3",
     "nativescript-vue": "^2.8.1",
-    "tns-android": "^6.5.3",
-    "tns-ios": "^6.5.2",
     "uuid-random": "^1.3.0"
   },
   "devDependencies": {
@@ -27,7 +26,7 @@
     "@types/node": "^12.12.42",
     "babel-loader": "^8.1.0",
     "nativescript-vue-template-compiler": "^2.6.0",
-    "node-sass": "^4.13.1",
+    "sass": "^1.28.0",
     "typescript": "^3.9.3",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
