--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "@nativescript-community/ble": "^3.0.4",
     "@nativescript/core": "^7.0.13",
     "@nativescript/theme": "^3.0.0",
-    "@nativescript/webpack": "^3.0.8",
     "msgpack": "^1.0.3",
-    "nativescript": "^6.8.0",
+    "nativescript": "^7.2.1",
     "nativescript-dev-version": "^0.2.0",
     "nativescript-fontawesome": "^1.0.0",
     "nativescript-insomnia": "^1.2.3",
@@ -21,8 +20,9 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "@nativescript/ios": "7.0.4",
+    "@nativescript/ios": "7.2.0",
     "@nativescript/types": "7.0.0",
+    "@nativescript/webpack": "~4.0.0",
     "@types/node": "^12.12.42",
     "babel-loader": "^8.1.0",
     "nativescript-vue-template-compiler": "^2.6.0",
