--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "license": "MIT",
   "dependencies": {
     "@nativescript-community/ble": "^3.0.4",
-    "@nativescript/core": "^7.0.13",
+    "@nativescript/core": "8.0.1",
     "@nativescript/theme": "^3.0.0",
     "msgpack": "^1.0.3",
-    "nativescript": "^7.2.1",
+    "nativescript": "^8.0.1",
     "nativescript-dev-version": "^0.2.0",
     "nativescript-fontawesome": "^1.0.0",
     "nativescript-insomnia": "^1.2.3",
+    "nativescript-ui-chart": "^8.0.2",
     "nativescript-ui-sidedrawer": "^9.0.3",
     "nativescript-vue": "^2.8.1",
     "uuid-random": "^1.3.0"
@@ -20,9 +21,9 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "@nativescript/ios": "7.2.0",
+    "@nativescript/ios": "8.0.0",
     "@nativescript/types": "7.0.0",
-    "@nativescript/webpack": "~4.0.0",
+    "@nativescript/webpack": "4.1.0",
     "@types/node": "^12.12.42",
     "babel-loader": "^8.1.0",
     "nativescript-vue-template-compiler": "^2.6.0",
