Name change bmimobile to bciapp

--- a/App_Resources/Android/settings.json
+++ b/App_Resources/Android/settings.json
@@ -1,1 +1,1 @@
-{"appId":"edu.miami.prasad.bmimobile","minSdkVersion":null,"targetSdkVersion":null}
+{"appId":"edu.miami.prasad.bciapp","minSdkVersion":null,"targetSdkVersion":null}
