--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@nativescript-community/ble": "^3.0.4",
     "@nativescript/core": "~8.1.5",
     "@nativescript/theme": "^3.0.0",
+    "@nativescript/webpack": "^5.0.4",
+    "clean-webpack-plugin": "^4.0.0",
     "msgpack": "^1.0.3",
     "nativescript": "^7.2.1",
     "nativescript-dev-version": "^0.2.0",
@@ -22,7 +24,6 @@
     "@babel/preset-env": "^7.0.0",
     "@nativescript/ios": "~8.1.0",
     "@nativescript/types": "~8.1.1",
-    "@nativescript/webpack": "~5.0.3",
     "@types/node": "^12.12.42",
     "babel-loader": "^8.1.0",
     "nativescript-vue-template-compiler": "^2.6.0",
@@ -33,5 +34,5 @@
     "vue-loader": "^15.9.2",
     "vue-property-decorator": "^8.4.2"
   },
-  "main": "main"
+  "main": "src/main.ts"
 }
