--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "msgpack": "^1.0.3",
     "nativescript": "^7.2.1",
     "nativescript-dev-version": "^0.2.0",
-    "nativescript-fontawesome": "^1.0.0",
     "nativescript-insomnia": "^1.2.3",
     "nativescript-ui-sidedrawer": "^9.0.3",
     "nativescript-vue": "^2.8.1",
@@ -28,7 +27,7 @@
     "babel-loader": "^8.1.0",
     "nativescript-vue-template-compiler": "^2.6.0",
     "sass": "^1.28.0",
-    "typescript": "^3.9.3",
+    "typescript": "~4.3.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
     "vue-loader": "^15.9.2",
