--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bci-app",
-  "version": "0.1.8",
+  "version": "0.1.9-rc1",
   "description": "Mobile phone application interface python UMNIL BCI",
   "author": "Kevin Davis <kevin.davis@med.miami.edu>",
   "license": "MIT",
