--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   },
   "dependencies": {
     "@nativescript-community/ble": "^3.0.4",
-    "@nativescript/core": "~8.2.2",
+    "@nativescript/core": "^8.4.7",
     "@nativescript/theme": "^3.0.0",
     "buffer": "^6.0.3",
     "clean-webpack-plugin": "^4.0.0",
     "msgpack": "^1.0.3",
-    "nativescript": "^7.2.1",
+    "nativescript": "^8.4.0",
     "nativescript-dev-version": "^0.2.0",
     "nativescript-gif": "^5.0.0",
-    "nativescript-insomnia": "^1.2.3",
+    "nativescript-insomnia": "^2.0.0",
     "nativescript-nodeify": "^0.8.0",
-    "nativescript-ui-sidedrawer": "^9.0.3",
+    "nativescript-ui-sidedrawer": "^14.2.1",
     "nativescript-vue": "^2.8.1",
     "nsblestream": "^0.1.0",
     "uuid-random": "^1.3.0"
@@ -27,19 +27,19 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "@nativescript/ios": "~8.2.3",
-    "@nativescript/types": "~8.2.0",
+    "@nativescript/ios": "^8.4.1",
+    "@nativescript/types": "^8.4.0",
     "@nativescript/webpack": "^5.0.4",
-    "@types/node": "^12.20.43",
-    "babel-loader": "^8.1.0",
+    "@types/node": "^18.11.18",
+    "babel-loader": "^9.1.2",
     "nativescript-vue-template-compiler": "^2.6.0",
     "sass": "^1.28.0",
-    "typescript": "~4.3.5",
-    "vue": "^2.6.11",
+    "typescript": "^4.9.4",
+    "vue": "^2.7.14",
     "vue-class-component": "^7.2.2",
-    "vue-loader": "^15.9.2",
-    "vue-property-decorator": "^8.4.2",
-    "webpack-cli": "^4.9.2"
+    "vue-loader": "^15.10.1",
+    "vue-property-decorator": "^8.5.1",
+    "webpack-cli": "^4.10.0"
   },
   "main": "src/main.ts"
 }
