--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bci-app",
-  "version": "0.1.9-rc2",
+  "version": "0.1.9-rc3",
   "description": "Mobile phone application interface python UMNIL BCI",
   "author": "Kevin Davis <kevin.davis@med.miami.edu>",
   "license": "MIT",
@@ -9,25 +9,25 @@
   },
   "dependencies": {
     "@nativescript-community/ble": "^3.0.4",
-    "@nativescript/core": "^8.4.7",
+    "@nativescript/core": "~8.5.0",
     "@nativescript/theme": "^3.0.0",
     "buffer": "^6.0.3",
     "clean-webpack-plugin": "^4.0.0",
     "msgpack": "^1.0.3",
-    "nativescript": "^8.5.3",
+    "nativescript": "^8.4.0",
     "nativescript-dev-version": "^0.2.0",
     "nativescript-gif": "^5.0.0",
     "nativescript-insomnia": "^2.0.0",
     "nativescript-nodeify": "^0.8.0",
     "nativescript-ui-sidedrawer": "^14.2.1",
-    "nativescript-vue": "^2.8.1",
+    "nativescript-vue": "~2.9.3",
     "nsblestream": "^0.1.0",
     "uuid-random": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "@nativescript/ios": "^8.4.1",
+    "@nativescript/ios": "^8.5.0",
     "@nativescript/types": "^8.4.0",
     "@nativescript/webpack": "^5.0.4",
     "@types/node": "^18.11.18",
