--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,25 @@
 {
   "compilerOptions": {
-    "target": "es2017",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
-    "module": "esnext",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
-    "lib": [
-      "dom", "es2017"
-    ],                             /* Specify library files to be included in the compilation. */
-    "sourceMap": true,                     /* Generates corresponding '.map' file. */
+    "target": "ES2020",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "lib": ["dom", "ESNext"],
+    "sourceMap": true,
     "noEmitHelpers": true,
-    "importHelpers": true,                 /* Import emit helpers from 'tslib'. */
-    "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    "baseUrl": ".",                       /* Base directory to resolve non-absolute module names. */
+    "importHelpers": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
-     },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
-    "typeRoots": [
-      "types"
-    ],                       /* List of folders to include type definitions from. */
-    "types": [
-      "node"
-    ],                           /* Type declaration files to be included in compilation. */
-    "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
-    "esModuleInterop": true,                   /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
-    "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
-    "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
-
+      "@/*": ["src/*"],
+      "~/*": ["src/*"]
+     },
+    "typeRoots": ["types"],
+    "types": ["node"],
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "skipLibCheck": true
   },
-  "include": [
-    "src",
-    "types"
-  ],
-  "exclude": [
-    "node_modules",
-    "platforms"
-  ]
+  "include": ["src", "types"],
+  "exclude": ["node_modules", "platforms"]
 }
