--- a/package.json
+++ b/package.json
@@ -1,45 +1,28 @@
 {
   "name": "bci-app",
-  "version": "0.1.9-rc3",
-  "description": "Mobile phone application interface python UMNIL BCI",
-  "author": "Kevin Davis <kevin.davis@med.miami.edu>",
-  "license": "MIT",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "ns run ios --device=$IOSID"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@nativescript-community/ble": "^3.0.4",
-    "@nativescript/core": "~8.5.0",
-    "@nativescript/theme": "^3.0.0",
-    "buffer": "^6.0.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "msgpack": "^1.0.3",
-    "nativescript": "^8.4.0",
-    "nativescript-dev-version": "^0.2.0",
-    "nativescript-gif": "^5.0.0",
-    "nativescript-insomnia": "^2.0.0",
-    "nativescript-nodeify": "^0.8.0",
-    "nativescript-ui-sidedrawer": "^14.2.1",
-    "nativescript-vue": "~2.9.3",
-    "nsblestream": "^0.1.0",
-    "uuid-random": "^1.3.0"
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "expo": "~48.0.18",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@nativescript/ios": "^8.5.0",
-    "@nativescript/types": "^8.4.0",
-    "@nativescript/webpack": "^5.0.4",
-    "@types/node": "^18.11.18",
-    "babel-loader": "^9.1.2",
-    "nativescript-vue-template-compiler": "^2.6.0",
-    "sass": "^1.28.0",
-    "typescript": "^4.9.4",
-    "vue": "^2.7.14",
-    "vue-class-component": "^7.2.2",
-    "vue-loader": "^15.10.1",
-    "vue-property-decorator": "^8.5.1",
-    "webpack-cli": "^4.10.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.14",
+    "typescript": "^4.9.4"
   },
-  "main": "src/main.ts"
+  "private": true
 }
