--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,6 @@
 {
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "lib": ["dom", "ESNext"],
-    "sourceMap": true,
-    "noEmitHelpers": true,
-    "importHelpers": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"],
-      "~/*": ["src/*"]
-     },
-    "typeRoots": ["types"],
-    "types": ["node"],
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "skipLibCheck": true
-  },
-  "include": ["src", "types"],
-  "exclude": ["node_modules", "platforms"]
+    "strict": true
+  }
 }
