Implemented almost all relevant screens/components. Fixing drag and drop

--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.bci-app"
     },
     "android": {
       "adaptiveIcon": {
@@ -25,6 +26,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "2bbbf5e2-f08d-4676-9662-41c60b4deb80"
+      }
     }
   }
 }
