--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'"
   },
   "dependencies": {
+    "@config-plugins/react-native-ble-plx": "^6.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -20,6 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-ble-manager": "^10.1.2",
+    "react-native-ble-plx": "^2.0.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
