--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.1.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0"
