--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@config-plugins/react-native-ble-plx": "^6.0.0",
+    "@expo/ngrok": "^4.1.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "base-64": "^1.0.0",
     "expo": "~48.0.18",
+    "expo-dev-client": "~2.2.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "package.json": "^2.0.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-ble-plx": "^2.0.3",
