Edit button no longer appears unless there are presets, settings and analytics screens are hidden, form-drag panel button hidden, dropdown menus now dropdown more

--- a/app.json
+++ b/app.json
@@ -12,8 +12,8 @@
     ],
     "name": "bci-app",
     "slug": "bci-app",
+    "orientation":"default",
     "version": "1.0.0",
-    "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
