--- a/app.json
+++ b/app.json
@@ -1,46 +1,12 @@
 {
   "expo": {
-    "plugins": [
-        [
-            "@config-plugins/react-native-ble-plx",
-            {
-                "isBackgroundEnabled":true,
-                "modes": ["peripheral", "central"],
-                "bluetoothAlwaysPermission": "Allow $(PRODUCT_NAME) to connect to bluetooth devices"
-            }    
-        ]
-    ],
-    "name": "bci-app",
-    "slug": "bci-app",
-    "version": "1.0.0",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "edu.miami.umnil.bci-app"
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "package": "android.com"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
     "extra": {
       "eas": {
-        "projectId": "2bbbf5e2-f08d-4676-9662-41c60b4deb80"
+        "projectId": "5012d8b2-cd74-4207-bcf5-0294e24cf462"
       }
+    },
+    "android": {
+      "package": "com.ahmad111111.bciapp"
     }
   }
 }
