--- a/app.json
+++ b/app.json
@@ -1,12 +1,46 @@
 {
-  "expo": {
-    "extra": {
-      "eas": {
-        "projectId": "5012d8b2-cd74-4207-bcf5-0294e24cf462"
-      }
-    },
-    "android": {
-      "package": "com.ahmad111111.bciapp"
-    }
-  }
+   "expo": {
+     "plugins": [
+         [
+             "@config-plugins/react-native-ble-plx",
+             {
+                 "isBackgroundEnabled":true,
+                 "modes": ["peripheral", "central"],
+                 "bluetoothAlwaysPermission": "Allow $(PRODUCT_NAME) to connect to bluetooth devices"
+             }    
+         ]
+     ],
+     "name": "bci-app",
+     "slug": "bci-app",
+     "version": "1.0.0",
+     "icon": "./assets/icon.png",
+     "userInterfaceStyle": "light",
+     "splash": {
+       "image": "./assets/splash.png",
+       "resizeMode": "contain",
+       "backgroundColor": "#ffffff"
+     },
+     "assetBundlePatterns": [
+       "**/*"
+     ],
+     "ios": {
+       "supportsTablet": true,
+       "bundleIdentifier": "edu.miami.umnil.bci-app"
+     },
+     "android": {
+       "adaptiveIcon": {
+         "foregroundImage": "./assets/adaptive-icon.png",
+         "backgroundColor": "#ffffff"
+       },
+       "package": "edu.miami.umnil.bci-app"
+     },
+     "web": {
+       "favicon": "./assets/favicon.png"
+     },
+     "extra": {
+       "eas": {
+         "projectId": "58ca0630-b68c-4305-9636-94ce8adb3b1a"
+       }
+     }
+   }
 }
